--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -1,16 +1,22 @@
+{% extends "myapp/base.html" %}
 {% load static %}
 <html>
-    <head>
-        <link rel="stylesheet" href="{% static 'myapp/styles.css' %}">
-    </head>
-    <body>
-      <nav>
-          <div>
-            <div>
-              <div>
-                <div class="flex">
-                    <img class="h-8 w-8" src="{% static 'myapp/images/shop.png' %}" alt="logo" />
-                    <span class="text-xl"> Pro Shop</span>
+
+{% block content %}
+      <nav class="bg-white shadow-lg">
+          <div class="max-w-6x1 mx-auto px-4">
+            <div class="flex justify-between">
+              <div class="flex space-x-7">
+                <div >
+                  <a href="#" class="flex items-centr px-2 py-4">
+                  <img class="h-8 w-8" src="{% static 'myapp/images/shop.png' %}" alt="logo" />
+                  <span class="text-gray-500 font-senibold text-xl"> Pro Shop</span>
+                </a>
+                </div>
+                <div class="items-centr flex space-x-1">
+                  <a href="#" class="py-4 px-2 text-gray-500 font-senibold border-b-4 border-green-500">Главная</a>
+                  <a href="#" class="py-4 px-2 text-gray-500 font-senibold">About</a>
+                  <a href="#" class="py-4 px-2 text-gray-500 font-senibold">Contacts</a>
                 </div>
               </div>
             </div>
@@ -23,7 +29,5 @@
             ID: {{item.id}} | Имя: {{item.name}} | Цена: {{item.price}} | Описание: {{item.description}} <br/>
             </a>
             {% endfor %}
-
         </h4>
-    </body>
-</html>
+        {% endblock content %}
