--- a/mysite/myapp/templates/myapp/base.html
+++ b/mysite/myapp/templates/myapp/base.html
@@ -8,8 +8,11 @@
     <title>Document</title>
 </head>
 <body>
+
+
+    {% include "myapp/navbar.html" %}
     {% block content %}
-    
+            TEXT
     {% endblock content %}
 </body>
 </html>
